// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`appinsights-instrumentation - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Guidance for Azure Application Insights instrumentation, telemetry, SDK setup, and observability. WHEN: App Insights guidance, instrumentation examples, APM best practices.",
  "extractedKeywords": [
    "app service",
    "appinsights",
    "application",
    "azure",
    "best",
    "bicep",
    "cli",
    "examples",
    "function",
    "guidance",
    "insights",
    "instrumentation",
    "monitor",
    "observability",
    "practices",
    "setup",
    "telemetry",
    "when",
  ],
  "name": "appinsights-instrumentation",
}
`;

exports[`appinsights-instrumentation - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app service",
  "appinsights",
  "application",
  "azure",
  "best",
  "bicep",
  "cli",
  "examples",
  "function",
  "guidance",
  "insights",
  "instrumentation",
  "monitor",
  "observability",
  "practices",
  "setup",
  "telemetry",
  "when",
]
`;
